syntax = "proto3";
package utils;

option go_package = "github.com/microsoft/retina/pkg/utils";

message RetinaMetadata {
    uint64 bytes = 1;

    // DNS metadata.
    DNSType dns_type = 2;
    uint32 num_responses = 3;

    // TCP ID. Either Tsval or Tsecr will be set.
    uint64 tcp_id = 4;
}

enum DNSType {
    UNKNOWN = 0;
    QUERY = 1;
    RESPONSE = 2;
}
